[package]
name = "ksh"
version = "0.1.0"
authors = ["Kegan Holtzhausen <Kegan.Holtzhausen@kindredgroup.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
hyper = "0.12.24"
# serde with derive support
serde = { version = "1.0", features = ["derive"] }
# serde json data format
serde_json = "1.0"
futures = "0.1.3"
# detect num cores for threading
num_cpus = "1.10.0"
# prometheus metrics support
prometheus = "0.5.0"